camera-manager-service/k8s/istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: camera-manager-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "camera-manager.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: camera-manager-service-destination
spec:
  host: camera-manager-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: camera-manager-service-route
spec:
  hosts:
    - "*"
  gateways:
    - camera-manager-gateway
  http:
  - match:
    - headers:
        token:
          regex: "^(.*;?)?(c001).*(;.*)?"
    route:
    - destination:
        host: camera-manager-service
        subset: v1
  - match:
    - uri:
        regex: "^(.*;?)?(:watch).*(;.*)?"
    route:
    - destination:
        host: camera-manager-service
        subset: v1
  - match:
    - headers:
        Accept:
          exact: "text/plain;"
    route:
    - destination:
        host: camera-manager-service
        subset: v1

  # - match:
  #   - uri:
  #       prefix: /
  #     queryParams:
  #       version:
  #         exact: bar
  #   route:
  #   - destination:
  #       port:
  #         number: 80
  #       host: nginx.demo.svc.cluster.local
  #       subset: bar

  # - match:
  #   - headers:
  #       authorization:
  #         exact: some-unique-string-here
  #     name: some-name
  #   route:
  #   - destination:
  #       host: my-service
#      timeout: 0.5s # - to enable if using Istio fault on service route



# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: svc-archiver
# spec:
#   hosts:
#   - {100f5734}.a.plumv.com
#   ports:
#   - number: 443
#     name: https
#     protocol: HTTPS
#   location: MESH_EXTERNAL
#   resolution: DNS

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: archiver-load-balancer
# spec:
#   host: {100f5734}.a.plumv.com
#   trafficPolicy:
#       loadBalancer:
#         simple: LEAST_CONN
